[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/gameplay/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/gameplay/EnemySpawner.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 2 )
enemy_scene = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
